# misis_prog_labs

./: README.md  pyproject.toml  requirements.txt
src/data/lab04/: input.txt
src/data/lab05/samples/: cities.csv  people.csv  people.json
src/data/lab08/: students_output.json
src/data/lab09/: students.csv
src/lab01/: README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py
src/lab01/python_files/: ex01.py  ex02.py  ex03.py
src/lab02/: README.md  ex01.py  ex02.py  ex03.py
src/lab03/: A.py  B_text_stats.py  README.md  input.txt
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  group.py  test.py
src/lab10/: README.md  linked_list.py  structures.py
src/lab10/tests/: test_linked_list.py  test_structures.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
