[tool.poetry]
name = "misis_prog_labs"
version = "0.1.0"
description = "Zagrebin Egor's BIVT labs NUST MISIS 2025 Moscow"
authors = ["Zagrebin Egor <zagrebine@yandex.ru>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
black = "^25.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
